<resources>
    <string name="app_name">Inventory</string>
    <string name="enterBarcode">Bundle Barcode</string>
    <string name="scan">Scan</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="title_item_list">Inventory</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_create_item">New Item</string>
    <string name="title_create_accessory">New Accessory</string>
    <string name="title_create_bundle">New Bundle</string>
    <string name="title_create_event">New Event</string>
    <string name="checked_in">In Inventory</string>
    <string name="view_inventory">View Inventory</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_event_list">Events</string>
    <string name="title_event_detail">Event Detail</string>
    <string name="title_activity_check_in">Check In</string>
    <string name="itemName">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="item_barcode">Item Barcode</string>
    <string name="take_photo">Take Photo</string>
    <string name="check_In">Check In</string>
    <string name="date_acquired">Date Acquired</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="event_name">Event Name:</string>
    <string name="add_items">Add Items</string>
    <string name="items">Items</string>
    <string name="name">Name</string>
    <string name="accessoryName">Accessory Name</string>
    <string name="accessoryDescription">Accessory Description</string>
    <string name="accessory_totalQuantity">Total Quantity</string>
    <string name="accessory_OnHand">On Hand</string>
    <string name="barcode">Barcode</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="start_date">Start Date</string>
    <string name="End_Date">End Date</string>
    <string name="accessory_name">Accessory Name</string>
    <string name="accessory_barcode">Accessory Barcode</string>
    <string name="title_blah_list">Pick Item</string>
    <string name="title_blah_detail">Pick Item</string>
    <string name="pack_up_items">Pack up items</string>
    <string name="check_in_items">Check in items</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="done">Done</string>
    <string name="accessories">Accessories</string>
    <string name="bundles">Bundles</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="serialNumber">Serial Number</string>
    <string name="delete">Delete</string>
</resources>
