<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_bundle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.inventory_tracker.company_name.eventinventorytracker.Create_Activities.Item_Bundle">

    <EditText
        android:id="@+id/detailBundle_name_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/detailBundle_addBarcode_EditText" />

    <TextView
        android:labelFor="@id/detailBundle_name_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_alignBaseline="@+id/detailBundle_name_EditText"
        android:layout_alignBottom="@+id/detailBundle_name_EditText"
        android:layout_alignEnd="@+id/textView4" />

    <EditText
        android:id="@+id/detailBundle_addBarcode_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/barcode"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/detailBundle_name_EditText"
        android:layout_toEndOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterBarcode"
        android:layout_alignBaseline="@+id/detailBundle_addBarcode_EditText"
        android:layout_alignBottom="@+id/detailBundle_addBarcode_EditText"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/detailBundle_description_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:layout_below="@+id/detailBundle_takePhotoOfBarcode_Button"
        android:layout_alignStart="@+id/detailBundle_addBarcode_EditText" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/detailBundle_description_TextView"
        android:layout_alignEnd="@+id/textView4"
        android:text="@string/description" />

    <Button
        android:id="@+id/detailBundle_takePhotoOfBarcode_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_photo"
        android:layout_alignBaseline="@+id/detailBundle_addBarcode_EditText"
        android:layout_alignBottom="@+id/detailBundle_addBarcode_EditText"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/detailBundle_addItemsToBundle_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_items"
        android:layout_marginTop="66dp"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5"/>

    <Button
        android:id="@+id/detailBundle_saveBundle_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:text="@string/save"
        android:layout_below="@+id/detailBundle_addItemsToBundle_Button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="88dp" />

    <Button
        android:id="@+id/detailBundle_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="37dp"
        android:text="@string/cancel"
        android:layout_alignBaseline="@+id/detailBundle_saveBundle_Button"
        android:layout_alignBottom="@+id/detailBundle_saveBundle_Button"
        android:layout_alignParentEnd="true" />

    <!--
    Need to create some kind of progressBar to see items that are currently in the bundle
    maybe a list box?
    -->

</RelativeLayout>
